2009-06-26 10:04  rsbivand

	* R/ogr.R, R/ogr_sp.R, inst/vectors/pgnullGPS.gpx, man/readOGR.Rd,
	  src/ogr_geom.cpp, src/ogrsource.cpp, ChangeLog, inst/ChangeLog,
	  DESCRIPTION: adding NULL, empty geometry, ring closure handling

2009-06-25 18:09  rsbivand

	* inst/vectors/pgnullGPS.gpx: GPX example

2009-06-25 15:03  rsbivand

	* ChangeLog, DESCRIPTION, R/ogr_sp.R, inst/vectors/test_trk2.gpx,
	  src/ogr_geom.cpp, src/ogrsource.cpp, inst/ChangeLog: adding
	  DateTime -> String reading

2009-06-24 20:28  rsbivand

	* src/ogrsource.cpp: Date handling

2009-04-16 18:05  rsbivand

	* DESCRIPTION, R/ogr_sp.R, man/readOGR.Rd: third coordinate in OGR
	  points

2009-02-16 10:13  rsbivand

	* R/gdal.R, ChangeLog, inst/ChangeLog: drop=FALSE in readGDAL

2009-02-16 09:17  rsbivand

	* INDEX, R/sp_gdal.R, ChangeLog, inst/ChangeLog: drop=FALSE in
	  readGDAL

2009-02-15 16:12  rsbivand

	* R/ogr.R, R/ogr_sp.R, man/readOGR.Rd, src/ogr_geom.cpp, ChangeLog,
	  inst/ChangeLog: feature type in ogrInfo

2009-01-31 20:47  rsbivand

	* DESCRIPTION, R/ogr.R, R/ogr_sp.R, man/readOGR.Rd: iconv in
	  ogrInfo

2009-01-20 14:31  rsbivand

	* DESCRIPTION, inst/OSGeo4W_test, inst/README.windows,
	  man/GDALReadOnlyDataset-methods.Rd, man/writeOGR.Rd: OSGeo4W
	  integration

2009-01-20 10:52  rsbivand

	* configure, configure.in, ChangeLog, inst/ChangeLog: NAD files
	  absence note

2009-01-20 10:39  rsbivand

	* inst/: README, OSGeo4W_test: OSGeo4W build

2009-01-19 21:42  rsbivand

	* DESCRIPTION, configure.win, R/AAA.R, inst/README.windows,
	  src/gdal-bindings.cpp, src/projectit.cpp: OSGeo4W attempts

2009-01-19 18:31  rsbivand

	* ChangeLog, configure.win, inst/ChangeLog, src/Makevars.win:
	  OSGeo4W build

2009-01-19 17:32  rsbivand

	* configure, configure.in, inst/README: proj-epsg*.rpm notes

2009-01-19 13:57  rsbivand

	* DESCRIPTION: configure changes to trap missing support files

2009-01-19 13:53  rsbivand

	* inst/README: configure changes to trap missing support files
